[package]
name = "uuid_v7"
version = "0.1.0"
edition = "2021"
authors = ["Emil <emil@esnx.xyz>"]
description = "A simple UUID v7 generator"
repository = "https://github.com/sssemil/uuid_v7"
readme = "README.md"
license = "MIT"
rust-version = "1.72.0"

[dependencies]
chrono = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "generate_uuid_v7"
path = "examples/generate_uuid_v7.rs"